# paramperceptnet

./: README.md  pyproject.toml  requirements.txt  requirements_examples.txt
Benchmarks/: benchmark.py  benchmark_piq.py  calculate_corrs.py  corrs.ipynb  dummy_benchmark_piq.py  pearson_results.csv  piq_metrics.py
Examples/: 00_Instantiate_Use.ipynb  01_Load_Pretrained.ipynb  02_Tweak_Params.ipynb  03_Use_As_Metric.ipynb  04_Load_Retrain.ipynb  99_Training_Simple.py
Experiments/: initializations.py  initializations_simple.py
Plotting/: Ablation_Parametric_Table.ipynb  Learning_Curves.ipynb  no_train_point.py  no_train_point_baseline.py
Training/: train_original.py  training.py  training_simple.py
paramperceptnet/: configs.py  constraints.py  initialization.py  layers.py  models.py  pretrained.py  test.py  training.py
tests/: test_load_pretrained.py
