[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paramperceptnet"
version = "0.0.1"
dependencies = [
  "jax",
  "flax",
  "optax",
  "clu",
  "ml_collections",
  "fxlayers @ git+https://github.com/Jorgvt/fxlayers.git",
]

[project.optional-dependencies]
examples = [
  "Pillow",
  "requests",
  "huggingface_hub",
  "datasets",
  "matplotlib",
  "safetensors",
  "tensorstore<0.1.67"
]

[tool.setuptools]
packages = ["paramperceptnet"]

[tool.uv.sources]
iqadatasets = { git = "https://github.com/Jorgvt/iqadatasets.git" }

[dependency-groups]
test = [
    "iqadatasets",
    "piq>=0.8.0",
    "tqdm>=4.67.3",
]
